fixed notice-dismiss alignment issue on toast notifications

--- a/css/notice.css
+++ b/css/notice.css
@@ -1,8 +1,8 @@
 .base-notice-list-item, .notice-container.toast .notice-list-item, .notice-container.bar-top .notice-list-item {
   width: 100%;
-  position: relative;
   box-sizing: border-box;
   min-height: 3em;
+  padding: .5em;
   -webkit-transition: all 250ms;
   -moz-transition: all 250ms;
   -o-transition: all 250ms;
@@ -16,16 +16,16 @@
   .base-notice-list-item.error, .notice-container.toast .error.notice-list-item, .notice-container.bar-top .error.notice-list-item {
     background: #ee5c61; }
   .base-notice-list-item .notice-icon, .notice-container.toast .notice-list-item .notice-icon, .notice-container.bar-top .notice-list-item .notice-icon {
-    width: 10%;
+    width: 5%;
     text-align: center;
     float: left; }
   .base-notice-list-item .notice-message, .notice-container.toast .notice-list-item .notice-message, .notice-container.bar-top .notice-list-item .notice-message {
-    width: 80%;
+    width: 90%;
     float: left; }
   .base-notice-list-item .notice-dismiss, .notice-container.toast .notice-list-item .notice-dismiss, .notice-container.bar-top .notice-list-item .notice-dismiss {
-    width: 10%;
+    width: 5%;
     text-align: center;
-    float: left; }
+    float: right; }
     .base-notice-list-item .notice-dismiss:hover, .notice-container.toast .notice-list-item .notice-dismiss:hover, .notice-container.bar-top .notice-list-item .notice-dismiss:hover {
       cursor: pointer;
       font-weight: bold; }
@@ -40,18 +40,21 @@
     right: 1em;
     max-width: 275px; }
     .notice-container.toast .notice-list-item {
-      border-radius: 3px;
-      padding: .5em;
-      -webkit-box-shadow: 0 0 5px #ddd;
-      -moz-box-shadow: 0 0 5px #ddd;
-      box-shadow: 0 0 5px #ddd; }
+      /*.border-radius(3px);*/
+      line-height: 1.25em;
+      box-shadow: #ddd 0 0 5px;
+      margin-top: 7px;
+      padding-left: 0; }
       .notice-container.toast .notice-list-item .notice-icon {
-        padding-top: .2em; }
+        width: 10%; }
+      .notice-container.toast .notice-list-item .notice-message {
+        width: 75%;
+        line-height: 1.25em; }
+      .notice-container.toast .notice-list-item .notification-dismiss {
+        width: 5%; }
   .notice-container.bar-top {
     top: 0;
     left: 0; }
-    .notice-container.bar-top .notice-list-item {
-      padding: 1em; }
 
 /*!
 Animate.css - http://daneden.me/animate
