--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,8 +1,8 @@
 .base-notice-list-item {
   width: 100%;
-  position: relative;
   box-sizing: border-box;
   min-height: 3em;
+  padding: .5em;
 
   -webkit-transition: all 250ms;
   -moz-transition: all 250ms;
@@ -23,19 +23,19 @@
   }
 
   .notice-icon {
-    width: 10%;
+    width: 5%;
     text-align: center;
     float: left;
   }
   .notice-message {
-    width: 80%;
+    width: 90%;
     float: left;
 
   }
   .notice-dismiss {
-    width: 10%;
+    width: 5%;
     text-align: center;
-    float: left;
+    float: right;
 
     &:hover {
       cursor: pointer;
@@ -56,16 +56,36 @@
     right: 1em;
     max-width: 275px;
 
+//    .notice-list-item {
+//      @extend .base-notice-list-item;
+//      border-radius: 3px;
+//      -webkit-box-shadow: 0 0 5px #ddd;
+//      -moz-box-shadow: 0 0 5px #ddd;
+//      box-shadow: 0 0 5px #ddd;
+//      padding: .5em 0;
+//
+//      .notice-icon {
+//      }
+//    }
     .notice-list-item {
       @extend .base-notice-list-item;
-      border-radius: 3px;
-      padding: .5em;
-      -webkit-box-shadow: 0 0 5px #ddd;
-      -moz-box-shadow: 0 0 5px #ddd;
-      box-shadow: 0 0 5px #ddd;
+      /*.border-radius(3px);*/
+      line-height: 1.25em;
+      box-shadow: #ddd 0 0 5px;
+      margin-top: 7px;
+      padding-left: 0;
 
       .notice-icon {
-        padding-top: .2em;
+        width: 10%;
+      }
+
+      .notice-message {
+        width: 75%;
+        line-height: 1.25em;
+      }
+
+      .notification-dismiss {
+        width: 5%;
       }
     }
 
@@ -77,9 +97,6 @@
 
     .notice-list-item {
       @extend .base-notice-list-item;
-      padding: 1em;
-
-
     }
   }
 
